--- a/valentines.html
+++ b/valentines.html
@@ -3,7 +3,7 @@
 </head>
 <body style="background-image: url(https://i.imgflip.com/3mwzlq.jpg); background-repeat: no-repeat; background-size: cover; background-position: center; height: 100%">
 <h1 style="text-align:center; background-color:lime;font-family:cursive">Look I don't care about this valentines salentine day..</h1>
-<p style="text-align:center; background-color: yellow; font-size: large;">But im doing this just for u!!😒❤️ <br> Just to make you happy!!❤️❤️</p>
+<p style="text-align:center; background-color: yellow; font-size: large;">But im doing this just for u!!❤️ <br> Just to make you happy!!❤️❤️</p>
 
 <a href="valentines1.html" style="text-align:center; background-color:aqua; padding: 10px; letter-spacing: 10px; " >Click Here!!</a>
 
