--- a/gfbday/bday.html
+++ b/gfbday/bday.html
@@ -13,7 +13,7 @@
 
 		<div class="wish">
 			<p>OMG!! You are 17 now, feels like it was yesterday when we were small kids playing and holding hands. Hehe anyways happy birthday babe, have a great day and I love you lots.<br>
-			You have my blessings ok ;)). I want you to live you life happily and I want to see you become a successful person in the future. Remember that you are an amazing person and you can do achieve anything you want, you just need to keep trying and never give up.<br>Lots of love from mee MUAHHH. Happy birthday once again and I love you <3</p>
+			You have my blessings ok ;)). I want you to live you life happily and I want to see you become a successful person in the future. Remember that you are an amazing person and you can do achieve anything you want, you just need to keep trying and never give up.<br>Lots of love from mee MUAHHH. Happy birthday once again and I love you <3<br><br>And make sure to check all the pics I have kept below(click on the arrows on the left and right)</p>
 
 			<p style="border-bottom: 2px solid grey"></p>
 		</div>
